6/11/2015 Hunter's event code and some java animations

--- a/public_html/caleb-css-animations/test.html
+++ b/public_html/caleb-css-animations/test.html
@@ -6,11 +6,37 @@ and open the template in the editor.
 -->
 <html>
   <head>
-    <title>TODO supply a title</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  </head>
+    <title>Known aliens</title>
+    <link href='test.css' type="text/css" rel="stylesheet">
+    </head>
   <body>
-    <div>TODO write content</div>
+    <div id="wrapper">
+      <ul id="index-cards">
+        <li id="card-1">
+          <h3>Card 1</h3>
+          <img src="abathur.jpg" height="130" width="130" alt="acathur"/>
+          <p>Name:Abathur<br/>
+          Race:Zerg</p>
+        </li>
+        <li id="card-2">
+          <h3>Card 2</h3>
+          <img src="artanis.jpg" height="130" width="130" alt="artanis"/>
+          <p>Name:Artanis<br/>
+          Race:Protoss</p>
+        </li>
+        <li id="card-3">
+          <h3>Card 3</h3>
+          <img src="dehaka.jpg" height="130" width="130" alt="dehaka"/>
+          <p>Name:Dehaka<br/>
+          Race:Zerg</p>
+        </li>
+        <li id="card-4">
+          <h3>Card 4</h3>
+          <img src="zeratul.jpg" height="130" width="130" alt="zeratul"/>
+          <p>Name: Zeratul<br/>
+          Race:Protoss</p>
+        </li>
+      </ul>
+    </div>
   </body>
 </html>
