--- a/public_html/index.html
+++ b/public_html/index.html
@@ -2,20 +2,17 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Gamedev Canvas Workshop</title>
+    <title>Shifting Planes</title>
     <link href='gameStyle.css' type="text/css" rel="stylesheet">
 </head>
-<body>
-
-<canvas id="myCanvas" width="480" height="320"></canvas>
+<body onload="initialization()">
+<canvas id="myCanvas" width="320" height="400"></canvas>
 <div>
-  <button type="button" id="fire">Fire</button>
   <button type="button" id="up" onmousedown="upOn()" onmouseup="upOff()">Up</button>
   <button type="button" id="left" onmousedown="leftOn()" onmouseup="leftOff()">Left</button>
   <button type="button" id="down" onmousedown="downOn()" onmouseup="downOff()">Down</button>
   <button type="button" id="right" onmousedown="rightOn()" onmouseup="rightOff()">Right</button>
 </div>
-<script src="gameScript.js"></script>
-
+<script src="bouncingBallGame.js"></script>
 </body>
 </html>
