--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -5,14 +6,16 @@
     <title>Shifting Planes</title>
     <link href='gameStyle.css' type="text/css" rel="stylesheet">
 </head>
-<body onload="initialization()">
-<canvas id="myCanvas" width="320" height="400"></canvas>
-<div>
-  <button type="button" id="up" onmousedown="upOn()" onmouseup="upOff()">Up</button>
-  <button type="button" id="left" onmousedown="leftOn()" onmouseup="leftOff()">Left</button>
-  <button type="button" id="down" onmousedown="downOn()" onmouseup="downOff()">Down</button>
-  <button type="button" id="right" onmousedown="rightOn()" onmouseup="rightOff()">Right</button>
-</div>
+<body>
+<canvas id="myCanvas" width="320" height="400" style="background-color: #e3dedb"></canvas>
+                    <div>
+                         <button type="button" id="start" onclick="start(300, 0)">Start</button>
+                        <button type="button" id="up" onmousedown="upOn()" onmouseup="upOff()">Up</button>
+                        <button type="button" id="left" onmousedown="leftOn()" onmouseup="leftOff()">Left</button>
+                        <button type="button" id="down" onmousedown="downOn()" onmouseup="downOff()">Down</button>
+                        <button type="button" id="right" onmousedown="rightOn()" onmouseup="rightOff()">Right</button>
+                    </div>
+                    <div id="messageArea"></div>
 <script src="bouncingBallGame.js"></script>
 </body>
 </html>
